Refatorado view para utilizar Handlebars e separado alerts em partials

--- a/app/views/erros/404.hbs
+++ b/app/views/erros/404.hbs
@@ -1,8 +1,8 @@
-<%- include('../layout/_header'); %>
+{{> _header}}
 
     <div class="text-center">
         <h1>Página não encontrada :(</h1>
         <p>Verifique se o endereço digitado está correto.</p>
     </div>
 
-<%- include('../layout/_footer'); %>
+{{> _footer}}
