--- a/app/views/erros/500.hbs
+++ b/app/views/erros/500.hbs
@@ -1,8 +1,8 @@
-<%- include('../layout/_header'); %>
+{{> _header}}
 
     <div class="text-center">
         <h1>Erro interno :(</h1>
         <p>Houve um problema do nosso lado, estamos trabalhando para corrigir.</p>
     </div>
 
-<%- include('../layout/_footer'); %>
+{{> _footer}}
