--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -1,15 +1,8 @@
-<%- include('../layout/_header'); %>
+{{> _header }}
 
     <main role="main" class="container index shadow">
 
-        <%if (message != '') { %>
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <%= message %>
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-        <%}%>
+        {{> _mensagens}}
 
         <h1>Analytics para seu app de forma simples.</h1>
         <hr>
@@ -60,4 +53,4 @@
         </section>
     </main>
 
-<%- include('../layout/_footer'); %>
+{{> _footer }}
