--- a/app/src/scss/app.scss
+++ b/app/src/scss/app.scss
@@ -1,2 +1,4 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~tags-input/tags-input";
+@import "~datatables.net-bs4/css/dataTables.bootstrap4.min";
+@import "~datatables.net-responsive-bs4/css/responsive.bootstrap4.min";
