Feito ajustes e correções nos estilos

--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -49,7 +49,7 @@
 
         <section class="how-index">
             <h2>Como utilizar?</h2>
-            <p>O sistema tem apenas um plano gratuito, então basta se cadastrar, criar um novo aplicativo no dashboard, e com ajuda da nossa <a href="#">documentação</a>, usar o código SKD fornecido e implementar os ganchos que capturaram os dados do seu app android, depois só esperar as interações de usuários e recarregar a dashboard para já poder visualizar os dados obtidos.</p>
+            <p>O sistema tem apenas um plano gratuito, então basta se cadastrar, criar um novo aplicativo no dashboard, e com ajuda da nossa <a href="#">documentação</a>, usar o código SDK fornecido e implementar os ganchos que capturaram os dados do seu app android, depois só esperar as interações de usuários e recarregar a dashboard para já poder visualizar os dados obtidos.</p>
         </section>
     </main>
 
