--- a/app/views/dashboard/crashes.hbs
+++ b/app/views/dashboard/crashes.hbs
@@ -11,7 +11,7 @@
 
         <hr>
 
-        <div class="index">
+        <div class="index shadow">
             <div class="row justify-content-around">
                 <div class="col col-md-11">
                     <table id="crashes" class="table table-striped responsive table-bordered" width="100%">
