Mudado lugar do gráfico de erros para a pagina de crashes

--- a/app/views/dashboard/crashes.hbs
+++ b/app/views/dashboard/crashes.hbs
@@ -53,9 +53,15 @@
                             </tr>
                         </tfoot>
                     </table>
+
+                    <br>
+
+                    <div id="chartCrashes" style="width:100%; height:400px;"></div>
                 </div>
             </div>
         </div>
+
+        {{> _graficosCrashes}}
     </main>
 
     <script>
