--- a/app/views/dashboard/usuarios.hbs
+++ b/app/views/dashboard/usuarios.hbs
@@ -14,7 +14,7 @@
         <div class="index shadow">
             <div class="row justify-content-around">
                 <div class="col col-md-11">
-                    <table id="crashes" class="table table-striped responsive table-bordered" width="100%">
+                    <table id="usuarios" class="table table-striped responsive table-bordered" width="100%">
                         <thead>
                             <tr>
                                 <th>ID</th>
@@ -73,6 +73,30 @@
                             </tr>
                         </tfoot>
                     </table>
+
+                    <hr>
+
+                    <table id="views" class="table table-striped responsive table-bordered" width="100%">
+                        <thead>
+                            <tr>
+                                <th>ID do Usuário</th>
+                                {{#each aplicativo.views}}
+                                    <th>{{ this }} - quantidade</th>
+                                    <th>{{ this }} - data da última visita</th>
+                                {{/each}}
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                        <tfoot>
+                            <tr>
+                                <th>ID do Usuário</th>
+                                {{#each aplicativo.views}}
+                                    <th>{{ this }} - quantidade</th>
+                                    <th>{{ this }} - data da última visita</th>
+                                {{/each}}
+                            </tr>
+                        </tfoot>
+                    </table>
                 </div>
             </div>
         </div>
@@ -80,7 +104,7 @@
 
     <script>
         $(document).ready(function() {
-            $('#crashes').DataTable( {
+            $('#usuarios').DataTable( {
                 "language": {
                     "url": "//cdn.datatables.net/plug-ins/1.10.19/i18n/Portuguese-Brasil.json"
                 },
@@ -90,7 +114,7 @@
                         display: $.fn.dataTable.Responsive.display.modal( {
                             header: function ( row ) {
                                 var data = row.data();
-                                return 'Detalhes do erro';
+                                return 'Detalhes do usuário';
                             }
                         } ),
                         renderer: $.fn.dataTable.Responsive.renderer.tableAll( {
@@ -114,15 +138,82 @@
                     { "data" : "os" },
                     { "data" : "versao_os" },
                     { "data" : "versao_app" },
-                    { "data" : "visto_primeiro" },
-                    { "data" : "visto_ultimo" },
+                    { 
+                        "data" : "visto_primeiro",
+                        "render": (data) => {
+                            var date = new Date(data);
+                            var month = date.getMonth() + 1;
+                            return (date.getDate() >= 10 ? date.getDate() : "0" + date.getDate()) + "/" + (month >= 10 ? month : "0" + month) + "/" + date.getFullYear();
+                        }
+                    },
+                    { 
+                        "data" : "visto_ultimo",
+                        "render": (data) => {
+                            var date = new Date(data);
+                            var month = date.getMonth() + 1;
+                            return (date.getDate() >= 10 ? date.getDate() : "0" + date.getDate()) + "/" + (month >= 10 ? month : "0" + month) + "/" + date.getFullYear();
+                        }
+                    },
                     { "data" : "numero_sessoes" },
-                    { "data" : "duracao_sessao" },
-                    { "data" : "total_duracao_sessao" },
+                    { 
+                        "data" : "duracao_sessao",
+                        "render": (data) => { return data + "s"; }
+                    },
+                    { 
+                        "data" : "total_duracao_sessao",
+                        "render": (data) => { return data + "s"; }
+                    },
                     { "data" : "ultima_view" },
-                    { "data" : "ultima_compra" },
-                    { "data" : "total_ultima_compra" },
-                    { "data" : "total_gasto" }
+                    { 
+                        "data" : "ultima_compra",
+                        "render": (data) => {
+                            var date = new Date(data);
+                            var month = date.getMonth() + 1;
+                            return (date.getDate() >= 10 ? date.getDate() : "0" + date.getDate()) + "/" + (month >= 10 ? month : "0" + month) + "/" + date.getFullYear();
+                        }
+                    },
+                    { 
+                        "data" : "total_ultima_compra",
+                        "render": (data) => { return "R$ " + data; }
+                    },
+                    { 
+                        "data" : "total_gasto",
+                        "render": (data) => { return "R$ " + data; }
+                    }
+                ]
+            });
+
+            $('#views').DataTable( {
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/1.10.19/i18n/Portuguese-Brasil.json"
+                },
+                "data": {{{json views}}},
+                responsive: {
+                    details: {
+                        display: $.fn.dataTable.Responsive.display.modal( {
+                            header: function ( row ) {
+                                var data = row.data();
+                                return 'Detalhes do usuário';
+                            }
+                        } ),
+                        renderer: $.fn.dataTable.Responsive.renderer.tableAll( {
+                            tableClass: 'table'
+                        } )
+                    }
+                },
+                "columns" : [
+                    { "data" : "id_usuario" },
+                    {{#each aplicativo.views}}
+                        { "data" : "{{ this }}.quantidade" },
+                        { 
+                            "data" : "{{ this }}.data",
+                            "render": (data) => {
+                                var date = new Date(data);
+                                var month = date.getMonth() + 1;
+                                return (date.getDate() >= 10 ? date.getDate() : "0" + date.getDate()) + "/" + (month >= 10 ? month : "0" + month) + "/" + date.getFullYear();
+                            }
+                        },
+                    {{/each}}
                 ]
             });
         });
