Implementado heat map de sessões a cada hora por dia da semana
e adicionado título às tabelas

--- a/app/views/dashboard/usuarios.hbs
+++ b/app/views/dashboard/usuarios.hbs
@@ -14,6 +14,8 @@
         <div class="index shadow">
             <div class="row justify-content-around">
                 <div class="col col-md-11">
+                    <h2 class="text-center">Tabela de usuários do app</h2>
+
                     <table id="usuarios" class="table table-striped responsive table-bordered" width="100%">
                         <thead>
                             <tr>
@@ -75,6 +77,8 @@
                     </table>
 
                     <hr>
+
+                    <h2 class="text-center">Tabela de acesso de views por usuários</h2>
 
                     <table id="views" class="table table-striped responsive table-bordered" width="100%">
                         <thead>
