--- a/app/views/dashboard/crashes.hbs
+++ b/app/views/dashboard/crashes.hbs
@@ -14,6 +14,8 @@
         <div class="index shadow">
             <div class="row justify-content-around">
                 <div class="col col-md-11">
+                    <h2 class="text-center">Tabela de travamento do app</h2>
+
                     <table id="crashes" class="table table-striped responsive table-bordered" width="100%">
                         <thead>
                             <tr>
