--- a/app/views/dashboard/index.hbs
+++ b/app/views/dashboard/index.hbs
@@ -85,6 +85,7 @@
                     <div id="colIdades" style="width:100%; height:400px;"></div>
                     <div id="mapaDist" style="width:100%; height:400px;"></div>
                     <div id="pieViewsAcessos" style="width:100%; height:400px;"></div>
+                    <div id="heatMapAcessos" style="width:100%; height:600px;"></div>
                 </div>
             </div>
 
