--- a/app/src/scss/app.scss
+++ b/app/src/scss/app.scss
@@ -2,3 +2,5 @@
 @import "~tags-input/tags-input";
 @import "~datatables.net-bs4/css/dataTables.bootstrap4.min";
 @import "~datatables.net-responsive-bs4/css/responsive.bootstrap4.min";
+@import "~intro.js/introjs.css";
+@import "~intro.js/themes/introjs-modern.css";
