--- a/app/views/layout/_header.hbs
+++ b/app/views/layout/_header.hbs
@@ -26,12 +26,13 @@
                             {{#if usuarioLogado}}
                                 <li class="nav-item">
                                     <div class="dropdown">
-                                        <a href="#" class="nav-link dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Bem-vindo {{usuarioLogado.local.nome}}</a>
+                                        <a href="#" class="nav-link dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-step="1000" data-intro="Caso queira ver esse tour novamente é só clicar em ver tour!">Bem-vindo {{usuarioLogado.local.nome}}</a>
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                             <a class="dropdown-item" href="/dashboard">Dashboard</a>
                                             <a class="dropdown-item" href="/usuarios/{{ usuarioLogado._id }}">Alterar perfil</a>
                                             <a class="dropdown-item" href="/dashboard/novo">Cadastrar novo app</a>
                                             <a class="dropdown-item" href="/dashboard/editar">Editar app selecionado</a>
+                                            <a class="dropdown-item" id="ver-tour" href="#">Ver tour</a>
                                             <a class="dropdown-item" href="/usuarios/logout">Log-out</a>
                                         </div>
                                     </div>
