Adicionado mais texto aos hints e intro

--- a/app/views/dashboard/index.hbs
+++ b/app/views/dashboard/index.hbs
@@ -76,16 +76,16 @@
                 </div>
             </div>
 
-            <div class="row justify-content-around" data-intro="Aqui temos os gráficos para melhor visualizar as informações obtidas" data-scrollTo="tooltip">
+            <div class="row justify-content-around" data-intro="Aqui temos os gráficos para melhor visualizar as informações obtidas. No canto superior direito existe um menu com opções para imprimir ou baixar em uma variedade de formatos o gráfico. No canto superior esquerdo existe um botão com dicas e explicações para cada gráfico" data-scrollTo="tooltip">
                 <div class="col-md-11 shadow bg-white border rounded stats-box">
-                    <div id="chartUsuarios" style="width:100%; height:400px;" data-hint="Aqui é mostrado a quantidade de usuários que foram visto pela primeira vez e pela última vez nos meses"></div>
-                    <div id="pieResolucoes" style="width:100%; height:400px;" data-hint="Gráfico de distribuição das resoluções dos dispositivos dos usuários"></div>
-                    <div id="barTempoSessao" style="width:100%; height:400px;" data-hint="Gráfico de distribuição das resoluções dos dispositivos dos usuários"></div>
-                    <div id="histTempoSessao" style="width:100%; height:400px;" data-hint="Gráfico de distribuição das resoluções dos dispositivos dos usuários"></div>
-                    <div id="colIdades" style="width:100%; height:400px;" data-hint="Gráfico de distribuição das resoluções dos dispositivos dos usuários"></div>
-                    <div id="mapaDist" style="width:100%; height:400px;" data-hint="Gráfico de distribuição das resoluções dos dispositivos dos usuários"></div>
-                    <div id="pieViewsAcessos" style="width:100%; height:400px;" data-hint="Gráfico de distribuição das resoluções dos dispositivos dos usuários"></div>
-                    <div id="heatMapAcessos" style="width:100%; height:600px;" data-hint="Gráfico de distribuição das resoluções dos dispositivos dos usuários"></div>
+                    <div id="chartUsuarios" style="width:100%; height:400px;" data-hint="Gráfico de linhas que mostra a quantidade de usuários que foram visto pela primeira vez e pela última vez nos meses"></div>
+                    <div id="pieResolucoes" style="width:100%; height:400px;" data-hint="Gráfico de pizza que mostra a quantidade de usuários por resolução da tela do dispositivo que utiliza o app"></div>
+                    <div id="barTempoSessao" style="width:100%; height:400px;" data-hint="Gráfico de barras que mostra  o tempo médio de sessão de cada usuário"></div>
+                    <div id="histTempoSessao" style="width:100%; height:400px;" data-hint="Histograma que mostra por meio de grupos de usuários o tempo médio de sessão. Os pontos são usuários individuais, x é o seu número e y o tempo médio de sessão. As barras são os grupos, x é o tempo médio e y é a quantidade de usuários"></div>
+                    <div id="colIdades" style="width:100%; height:400px;" data-hint="Gráfico de barras que mostra a quantidade de usuários por idade"></div>
+                    <div id="mapaDist" style="width:100%; height:400px;" data-hint="Mapa que mostra a quantidade de usuários em cada país"></div>
+                    <div id="pieViewsAcessos" style="width:100%; height:400px;" data-hint="Gráfico de pizza que mostrada a quantidade de acessos em cada tela do seu app (são considerados múltiplos acessos por usuário)"></div>
+                    <div id="heatMapAcessos" style="width:100%; height:600px;" data-hint="Mapa de calor que mostra sessões iniciadas a cada hora dos dias da semana. Quanto mais escuro, mais acessos)."></div>
                 </div>
             </div>
 
