--- a/app/views/layout/_header.hbs
+++ b/app/views/layout/_header.hbs
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="theme-color" content="#343A40">
-        <link rel="stylesheet" href="/css/test.css">
+        <link type="text/css" rel="stylesheet" href="/css/test.css">
+        <link type="text/css" rel="stylesheet" href="/css/lightslider.min.css">
         <script src="/js/main.js"></script>
+        <script src="/js/lightslider.min.js"></script>
         <title>Applytics</title>
     </head>
 
