Feito refatorações no controller da dashboard

--- a/app/views/dashboard/formApp.hbs
+++ b/app/views/dashboard/formApp.hbs
@@ -39,7 +39,7 @@
                         <input type="tags" class="form-control" name="views" value="{{ aplicativo.views }}" placeholder="Nome das telas">
                     </div>
 
-                    <input type="submit" value="Editar" class="btn btn-primary">
+                    <input type="submit" value="{{ acaoForm }}" class="btn btn-primary">
                 </form>
             </div>
         </div>
